--- a/src/app/post/update-post/update-post.component.html
+++ b/src/app/post/update-post/update-post.component.html
@@ -1,6 +1,6 @@
 <div>
     <mat-card class="matcard">
-      <h5 style="color: grey">Create Post</h5>
+      <h5 style="color: grey">Edit Post</h5>
       <form [formGroup]="form">
         <mat-form-field style="width: 100%;margin-top: 10px;">
           <input style="width: 100%;" matInput placeholder="add a title..." name="title" autocomplete="off"
