--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,16 @@
     margin-left: 10px;
     font-weight: bold;
   }
+
+  ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  a{
+    text-decoration: none;
+    color: white;
+    float: left;
+    /* font-weight: bold; */
+  }
