--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,12 @@
 <mat-toolbar>
-    <span style="text-align: center;width: 100%;color: grey;" id="heading" routerLink="/">MEAN stack CRUD Operations App</span>
+    <ul>
+        <li style="float: left;">
+            <a style="margin-left: 20px;color: grey;" mat-button routerLink="/">Home</a>
+        </li>
+        <li style="float: left;">
+            <a style="margin-left: 10px;color: grey;" mat-button routerLink="list">List</a>
+        </li>
+    </ul>
+    <span style="text-align: center;width: 80%;color: grey;" id="heading" routerLink="/">MEAN-Stack-File-Uploading
+        App</span>
 </mat-toolbar>
